---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r#\"\n            library(purrr)\n\n                    mtcars |>\n                split(mtcars$cyl) |>  # from base R\n            map(\\(df) lm(mpg~wt, data    = df)) |>\n            map(summary  ) |>\n            map_dbl(\"r.squared\"  )\n        \"#\n})"
---
library(purrr)

mtcars |>
  split(mtcars$cyl) |> # from base R
  map(\(df) lm(mpg ~ wt, data = df)) |>
  map(summary) |>
  map_dbl("r.squared")
